--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -372,13 +372,19 @@ $gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
 
 // scss-docs-start spacer-variables-maps
 $spacer: 1rem !default;
-$spacers: (
+$spacers: ( // *custom
   0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
+  1: $spacer * .25, // 4px
+  2: $spacer * .5, // 8px
+  3: $spacer * .75, // 12px
+  4: $spacer, // 16px
+  5: $spacer * 1.5, // 24px
+  6: $spacer * 1.875, // 30px
+  7: $spacer * 2.25, // 36px
+  8: $spacer * 2.5, // 40px
+  9: $spacer * 3, // 48px
+  10: $spacer * 3.75, // 60px
+  11: $spacer * 4.5, // 72px
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -398,7 +404,8 @@ $position-values: (
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   $white !default;
+// $body-bg:                   $white !default;
+$body-bg:                   #FDF8F4 !default;// *custom
 $body-color:                $gray-900 !default;
 $body-text-align:           null !default;
 
@@ -566,22 +573,32 @@ $line-height-base:            1.5 !default;
 $line-height-sm:              1.25 !default;
 $line-height-lg:              2 !default;
 
+// $h1-font-size:                $font-size-base * 2.5 !default;
+// $h2-font-size:                $font-size-base * 2 !default;
+// $h3-font-size:                $font-size-base * 1.75 !default;
+// $h4-font-size:                $font-size-base * 1.5 !default;
+// $h5-font-size:                $font-size-base * 1.25 !default;
+// $h6-font-size:                $font-size-base !default;
+
+// *custom
 $h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.5 !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
-$h6-font-size:                $font-size-base !default;
+$h2-font-size:                $font-size-base * 2.25 !default;
+$h3-font-size:                $font-size-base * 2 !default;
+$h4-font-size:                $font-size-base * 1.75 !default;
+$h5-font-size:                $font-size-base * 1.5 !default;
+$h6-font-size:                $font-size-base * 1.25!default;
 // scss-docs-end font-variables
 
 // scss-docs-start font-sizes
+// *custom
 $font-sizes: (
-  1: $h1-font-size,
-  2: $h2-font-size,
-  3: $h3-font-size,
-  4: $h4-font-size,
-  5: $h5-font-size,
-  6: $h6-font-size
+  1: $h2-font-size,// 36px
+  2: $h3-font-size,// 32px
+  3: $h4-font-size,// 28px
+  4: $h5-font-size,// 24px
+  5: $h6-font-size,// 20px
+  6: $font-size-base,// 16px
+  7: $font-size-base * 0.75 // 12px
 ) !default;
 // scss-docs-end font-sizes
 
