--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,10 +1,10 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
 
+@import './vendors/vendors';
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
-
 
 @import './pages/index.scss';
 
