--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,27 @@
-.index-title {
-  font-size: 100px;
+// 字型
+.font-NotoSans{
+  font-family:'Noto Sans TC';
+}
+.font-NotoSerif{
+  font-family: 'Noto Serif TC';
+}
+.font-Caveat{
+  font-family: 'Caveat';
+}
+.font-OpenSans {
+  font-family: 'Open Sans';
+}
+//swiper (測試用)
+.swiper {
+  width: 100%;
+  height:200px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
