--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
+@import './utils/utilities';
 
 @import './vendors/vendors';
 
