增加首頁菜單輪播

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,7 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
 @import './utils/utilities';
+@import './mixin/mixin';
 
 @import './vendors/vendors';
 
