--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -52,12 +52,16 @@
 }
 // banner start
 .banner{
-  background: url('../images/index-banner-bgImg-mobile.png') center;
-  min-height: 446px;
+  background: url('../images/index-banner-bgImg.png') center;
+  min-height: 800px;
   background-size: cover;
-  @media (min-width: 376px){
-    background: url('../images/index-banner-bgImg.png');
-    min-height: 800px;
+  // @media (min-width: 376px){
+    //   max-height: 800px;
+    // }
+    @media (max-width: 767px){
+    background: url('../images/index-banner-bgImg-mobile.png') center;
+    min-height: 446px;
+    background-size: cover;
   }
   .logoText{
     max-width: 100%;
@@ -72,10 +76,12 @@
   }
   .btnGroup{
     align-self: flex-end;
-    margin-bottom: 42px;
-    @media (min-width: 376px){
-      margin-bottom: 128px;
-      // width: ;
+    margin-bottom: 128px;
+    @media (max-width: 767px){
+      margin-bottom: 48px;
+    }
+    @media (max-width: 376px){
+      margin-bottom: 42px;
     }
   }
 }
