--- a/assets/scss/utils/_utilities.scss
+++ b/assets/scss/utils/_utilities.scss
@@ -19,3 +19,8 @@ $utilities: map-merge(
 .fw-500 {
   font-weight: 500;
 }
+.border-bottom-1{
+  @media (max-width: 992px){
+    border-bottom: 1px solid $gray-200;
+  }
+}
