--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="bg-color py-4 border-top">
-    <div class="container">
-        <div class="d-flex justify-content-around">
+<footer class="py-4 border-top">
+    <div class="container ">
+        <div class="d-flex justify-content-around footer">
             <div class="d-flex align-items-center">
                     <img src="/assets/images/Logo-sm.png" alt="">
             </div>
@@ -23,9 +23,9 @@
         <div>
             <div class="Info">
                 <ul class="d-flex ">
-                    <li><img src="/assets/images/Email.png" alt="">lumminous@gmail.com</li>
-                    <li><img src="/assets/images/Phone.png" alt="">(02)6765-0768</li>
-                    <li><img src="/assets/images/Access time.png" alt="">Business Hour 8:30~15:00</li>
+                    <li class="me-3"><img src="/assets/images/Email.png" alt="" style="margin-right: 0.5rem;">lumminous@gmail.com</li>
+                    <li class="me-3"><img src="/assets/images/Phone.png" alt="" style="margin-right: 0.5rem;">(02)6765-0768</li>
+                    <li class="me-3"><img src="/assets/images/Access time.png" alt="" style="margin-right: 0.5rem;">Business Hour 8:30~15:00</li>
                 </ul>
             </div>
         </div>
