--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -36,5 +36,11 @@
         menu
       </span>
     </a>
+    <a class="closeIcon d-lg-none" href="#" style="display:none;">
+      <span class="material-symbols-outlined">
+        close
+      </span>
+    </a>
   </div>
 </header>
+<div class="navbar_overlay"></div>
