--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -58,7 +58,7 @@
   //   max-height: 800px;
   // }
   @media (max-width: 767px) {
-    background: url('../images/index-banner-bgImg-mobile.png')  center;
+    background: url('../images/index-banner-bgImg-mobile.png') center;
     min-height: 446px;
     background-size: cover;
   }
@@ -293,7 +293,7 @@
 }
 .newsPic {
   display: flex;
-  max-width: 100%;
+  max-width: 636px;
   height: 703px;
   position: absolute;
   z-index: 0;
