新增最新消息主頁

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/bootstrap/scss/functions";
+@import '../../node_modules/bootstrap/scss/functions';
 @import './utils/variables';
 @import './utils/utilities';
 @import './mixin/mixin';
@@ -10,4 +10,6 @@
 
 @import './pages/index.scss';
 
-@import "../../node_modules/bootstrap";
+@import '../../node_modules/bootstrap';
+@import './pages/news.scss';
+@import './pages/news-content';
