--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,40 +1,64 @@
 <footer class="py-4 border-top">
-    <div class="container ">
-        <div class="d-flex justify-content-around footer">
-            <div class="d-flex align-items-center">
-                    <img src="/assets/images/Logo-sm.png" alt="">
-            </div>
-            <div class="footer-box">
-                <ul class="d-flex">
-                    <li><a href="#">關於我們</a></li>
-                    <li><a href="#">最新消息/優惠</a></li>
-                    <li><a href="#">線上訂位</a></li>
-                    <li><a href="#">會員註冊/登入</a></li>
-                </ul>
-            </div>
-            <div class="footer-icon d-flex align-items-center">
-                <ul class="d-flex">
-                    <li><a href="#"><img src="/assets/images/Facebook.png" alt="#"></a></li>
-                    <li><a href="#"><img src="/assets/images/Instagram.png" alt="#"></a></li>
-                    <li><a href="#"><img src="/assets/images/Line.png" alt="#"></a></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <div class="Info">
-                <ul class="d-flex ">
-                    <li class="me-3"><img src="/assets/images/Email.png" alt="" style="margin-right: 0.5rem;">lumminous@gmail.com</li>
-                    <li class="me-3"><img src="/assets/images/Phone.png" alt="" style="margin-right: 0.5rem;">(02)6765-0768</li>
-                    <li class="me-3"><img src="/assets/images/Access time.png" alt="" style="margin-right: 0.5rem;">Business Hour 8:30~15:00</li>
-                </ul>
-            </div>
-        </div>
-        <div class="border"></div>
-        <div class="Copyright">
-            <ul class="d-flex justify-content-between">
-                <li><p>Copyright © 2023 luminous.com | All Rights Reserved.</p></li>
-                <li><p>本網站僅作為團體練習作品，無任何商業用途</p></li>
-            </ul>
-        </div>
+  <div class="container">
+    <div class="d-flex justify-content-around footer">
+      <div class="d-flex align-items-center">
+        <img src="/assets/images/Logo-sm.png" alt="" />
+      </div>
+      <div class="footer-box">
+        <ul class="d-flex">
+          <li><a href="#">關於我們</a></li>
+          <li><a href="#">最新消息/優惠</a></li>
+          <li><a href="#">線上訂位</a></li>
+          <li><a href="#">會員註冊/登入</a></li>
+        </ul>
+      </div>
+      <div class="footer-icon d-flex align-items-center">
+        <ul class="d-flex">
+          <li>
+            <a href="#"><img src="/assets/images/Facebook.png" alt="#" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="/assets/images/Instagram.png" alt="#" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="/assets/images/Line.png" alt="#" /></a>
+          </li>
+        </ul>
+      </div>
     </div>
+    <div>
+      <div class="Info">
+        <ul class="d-flex">
+          <li class="me-3">
+            <img
+              src="/assets/images/Email.png"
+              alt=""
+              style="margin-right: 0.5rem"
+            />lumminous@gmail.com
+          </li>
+          <li class="me-3">
+            <img
+              src="/assets/images/Phone.png"
+              alt=""
+              style="margin-right: 0.5rem"
+            />(02)6765-0768
+          </li>
+          <li class="me-3">
+            <img
+              src="/assets/images/Access time.png"
+              alt=""
+              style="margin-right: 0.5rem"
+            />Business Hour 8:30~15:00
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="border"></div>
+    <div class="Copyright">
+      <ul class="d-flex justify-content-between">
+        <li><p>Copyright © 2023 luminous.com | All Rights Reserved.</p></li>
+        <li><p>本網站僅作為團體練習作品，無任何商業用途</p></li>
+      </ul>
+    </div>
+  </div>
 </footer>
