--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -12,4 +12,4 @@
 
 @import '../../node_modules/bootstrap';
 @import './pages/news.scss';
-@import './pages/news-content';
+@import './pages/newsContent';
