菜單分頁面

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -9,5 +9,7 @@
 @import './layout/footer.scss';
 
 @import './pages/index.scss';
+@import './pages/menu.scss';
+
 
 @import "../../node_modules/bootstrap";
