--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,6 +10,7 @@
 
 @import './pages/index.scss';
 @import './pages/menu.scss';
+@import './pages/login.scss';
 
 
 @import '../../node_modules/bootstrap';
