--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -327,6 +327,7 @@ $dark:          $gray-900 !default;
 
 // scss-docs-start theme-colors-map
 $theme-colors: (  
+  "blue":           #0d6efd,
   "primary":        #461B09,  //custom =primary-300
   "primary-200":    #693B28,  //custom 
   "primary-100":    #B58A78,  //custom
