--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="py-4 border-top">
+<footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
