--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -1,19 +1,20 @@
 
 .login-bg{
-    position: relative;
+    
     img{
+        position: relative;
       background-size: cover;
       display: block;
       height: 100%;
       min-height: 100vh;
       overflow: hidden;
-      position: absolute;
       width: 100%;
       max-width: 100%;
       z-index: -1;
     }
     @media (max-width:'992px') {
-      display: none;
+        position: relative;
+      display:block;
     }
   }
   .login-body-bg{
@@ -28,11 +29,16 @@
       width: 30%;
       @media (max-width:'992px') {
         width: 100%;
+
+
       }
   }
-form{
+  .login-body-bg{
     position: absolute;
-    width: 200px;
-    top: 100px;
-    z-index: 1;
+    top:300px;
+    @media (max-width:'992px') {
+        position: absolute;
+        top:200px;
+        width: 100%;
+    }
 } 
