--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -416,6 +416,7 @@ $spacers: ( // *custom
   9: $spacer * 3, // 48px
   10: $spacer * 3.75, // 60px
   11: $spacer * 4.5, // 72px
+  12: $spacer * 7,//100px
 ) !default;
 // scss-docs-end spacer-variables-maps
 
