--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -14,7 +14,7 @@
       class="list-unstyled d-lg-flex mb-0 align-items-center dropdownNavbar bg-light"
     >
       <li class="nav_item border-bottom-1">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="#">關於我們</a>
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="2_aboutUs.html">關於我們</a>
       </li>
       <li class="nav_item border-bottom-1">
         <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="3_newsMain.html"
