--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -56,7 +56,7 @@
 // 剩餘區塊背景色
 @media (max-width: 992px) {
   .navbar_overlay {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgba(52, 52, 52);
     position: absolute;
