新增線上預訂

--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -7,8 +7,8 @@
       <div class="footer-box">
         <ul class="d-flex">
           <li><a href="#">關於我們</a></li>
-          <li><a href="#">最新消息/優惠</a></li>
-          <li><a href="#">線上訂位</a></li>
+          <li><a href="3_newsMain.html">最新消息/優惠</a></li>
+          <li><a href="5-1_booking.html">線上訂位</a></li>
           <li><a href="#">會員註冊/登入</a></li>
         </ul>
       </div>
