--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -63,7 +63,9 @@
         </ul>
       </li>
       <li class="nav_item border-bottom-1">
-        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="#">線上訂位</a>
+        <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="5-1_booking.html"
+          >線上訂位</a
+        >
       </li>
       <li class="nav_item">
         <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="#">會員註冊/登入</a>
