--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -13,3 +13,4 @@
 @import '../../node_modules/bootstrap';
 @import './pages/news.scss';
 @import './pages/newsContent';
+@import './pages/bookingForm';
