調整img(margin)、row、圓角、ul預設padding

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,11 +1,11 @@
 .d-flex{
   list-style:none;
 };
-img{
-  @media (max-width:992px) {
-    margin: auto;
-  }
-}
+// img{
+//   @media (max-width:992px) {
+//     margin: auto;
+//   }
+// }
 .footer{
   @media (max-width:992px) {
     flex-direction: column;
