--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
-        <img src="/assets/images/Logo-sm.png" alt="" />
+        <img class="mx-auto" src="/assets/images/Logo-sm.png" alt="" />
       </div>
       <div class="footer-box">
-        <ul class="d-flex">
+        <ul class="d-flex ps-0">
           <li><a href="#">關於我們</a></li>
           <li><a href="3_newsMain.html">最新消息/優惠</a></li>
           <li><a href="5-1_booking.html">線上訂位</a></li>
@@ -13,7 +13,7 @@
         </ul>
       </div>
       <div class="footer-icon d-flex align-items-center">
-        <ul class="d-flex">
+        <ul class="d-flex ps-0">
           <li>
             <a href="#"><img src="/assets/images/Facebook.png" alt="#" /></a>
           </li>
@@ -28,7 +28,7 @@
     </div>
     <div>
       <div class="Info">
-        <ul class="d-flex">
+        <ul class="d-flex ps-0">
           <li class="me-3">
             <img
               src="/assets/images/Email.png"
@@ -55,7 +55,7 @@
     </div>
     <div class="border"></div>
     <div class="Copyright">
-      <ul class="d-flex justify-content-between">
+      <ul class="d-flex justify-content-between ps-0">
         <li><p>Copyright © 2023 luminous.com | All Rights Reserved.</p></li>
         <li><p>本網站僅作為團體練習作品，無任何商業用途</p></li>
       </ul>
