修改網址參數

--- a/layout/menuList.ejs
+++ b/layout/menuList.ejs
@@ -1,26 +1,23 @@
-
-
-
   <div class="container ">
     <div class="py-6">
       <ul id="menuList" class=" d-flex justify-content-around">
         <li>
-          <a id="Salad" href="4-1_menu-salad.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
+          <a id="Salad" href="4-1_menu-salad.html?menu=Salad" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
         </li>
         <li>
-          <a id="Burger" href="4-2_menu-burger.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
+          <a id="Burger" href="4-1_menu-salad.html?menu=Burger" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
         </li>
         <li>
-          <a id="Sandwich"  href="4-3_menu-sandwich.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
+          <a id="Sandwich"  href="4-1_menu-salad.html?menu=Sandwich" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
         </li>
         <li>
-          <a id="Brunch"  href="4-4_menu-brunch.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
+          <a id="Brunch"  href="4-1_menu-salad.html?menu=Brunch" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
         </li>
         <li>
-          <a id="Pasta"  href="4-5_menu-pasta.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
+          <a id="Pasta"  href="4-1_menu-salad.html?menu=Pasta" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
         </li>
         <li>
-          <a id="Drink"  href="4-6_menu-drink.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
+          <a id="Drink"  href="4-1_menu-salad.html?menu=Drink" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
         </li>
       </ul>
     </div>
