--- a/layout/menuList.ejs
+++ b/layout/menuList.ejs
@@ -1,27 +1,54 @@
-
-
-
-  <div class="container ">
-    <div class="py-6">
-      <ul id="menuList" class=" d-flex justify-content-around">
-        <li>
-          <a id="Salad" href="4-1_menu-salad.html" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
-        </li>
-        <li>
-          <a id="Burger" href="4-2_menu-burger.html" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
-        </li>
-        <li>
-          <a id="Sandwich"  href="4-3_menu-sandwich.html" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
-        </li>
-        <li>
-          <a id="Brunch"  href="4-4_menu-brunch.html" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
-        </li>
-        <li>
-          <a id="Pasta"  href="4-5_menu-pasta.html" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
-        </li>
-        <li>
-          <a id="Drink"  href="4-6_menu-drink.html" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
-        </li>
-      </ul>
-    </div>
+<div class="container">
+  <div class="py-6">
+    <ul id="menuList" class="d-flex justify-content-around">
+      <li>
+        <a
+          id="Salad"
+          href="4-1_menu-salad.html"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >沙拉系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Burger"
+          href="4-2_menu-burger.html"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >漢堡系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Sandwich"
+          href="4-3_menu-sandwich.html"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >三明治系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Brunch"
+          href="4-4_menu-brunch.html"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >早午餐系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Pasta"
+          href="4-5_menu-pasta.html"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >義大利麵系列</a
+        >
+      </li>
+      <li>
+        <a
+          id="Drink"
+          href="4-6_menu-drink.html"
+          class="link-primary fs-5 fw-bold font-NotoSerif"
+          >飲品系列</a
+        >
+      </li>
+    </ul>
   </div>
+</div>
