訂位功能完成

--- a/assets/scss/pages/_bookingForm.scss
+++ b/assets/scss/pages/_bookingForm.scss
@@ -90,3 +90,10 @@
     align-items: center;
   }
 }
+.form-btn {
+  width: 8vw;
+}
+.form-btn-group {
+  display: flex;
+  justify-content: space-evenly;
+}
