忘記密碼切版

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -11,6 +11,7 @@
 @import './pages/index.scss';
 @import './pages/menu.scss';
 @import './pages/login.scss';
+@import'./pages/password.scss';
 
 @import '../../node_modules/bootstrap';
 @import './pages/news.scss';
