--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -9,7 +9,7 @@
           <li><a href="#">關於我們</a></li>
           <li><a href="3_newsMain.html">最新消息/優惠</a></li>
           <li><a href="5-1_booking.html">線上訂位</a></li>
-          <li><a href="#">會員註冊/登入</a></li>
+          <li><a href="_login.html">會員註冊/登入</a></li>
         </ul>
       </div>
       <div class="footer-icon d-flex align-items-center">
