登入後顯示會員中心

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -81,10 +81,42 @@
           >線上訂位</a
         >
       </li>
-      <li class="nav_item">
+      <li class="memberLogin">
         <a class="py-4 py-lg-3 px-5 fw-500 d-block" href="_login.html"
           >會員註冊/登入</a
         >
+      </li>
+      <li class="memberCenterItem">
+        <a
+          class="selectMemberCenter py-4 px-5 fw-500 position-relative d-block border-bottom-1 d-flex justify-content-between"
+          href="#"
+          >會員中心<span class="material-symbols-outlined align-bottom">
+            arrow_drop_down
+          </span></a
+        >
+        <ul class="dropdownMemberCenter position_absolute_lg list-unstyled ps-0">
+          <li>
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="6-1-1-1_modify-member-info.html"
+              >修改會員資料</a
+            >
+          </li>
+          <li>
+            <a
+              class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="6-1-1-2_reservation-info.html"
+              >查看訂單資訊</a
+            >
+          </li>
+          <li>
+            <a
+              class="logOutBtn py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
+              href="index.html"
+              >登出</a
+            >
+          </li>
+        </ul>
       </li>
     </ul>
     <a class="hamberMenu d-lg-none" href="#">
