--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -19,7 +19,7 @@
     color: $primary-100;
   }
 }
-.dropdownMenu {
+.dropdownMenu, .dropdownMemberCenter {
   top: 80%;
   width: inherit;
   z-index: 12;
@@ -43,6 +43,12 @@
   max-height: 288px;
   @media (max-width: 992px) {
     max-height: 342px;
+  }
+}
+.dropdownMemberCenter.active {
+  max-height: 144px;
+  @media (max-width: 992px) {
+    max-height: 172px;
   }
 }
 .selectMenu.focused:focus {
