加入BackToTop與 顧客評論調整

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -326,3 +326,15 @@
   background-color: transparent;
 }
 //news section end
+#toTOP {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
