查詢訂位資訊(未連結會員資訊)

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -106,7 +106,7 @@
             <a
               class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
               href="6-1-1-2_reservation-info.html"
-              >查看訂單資訊</a
+              >查看訂位資訊</a
             >
           </li>
           <li>
