增加swal登入註冊提示

--- a/assets/scss/pages/_bookingForm.scss
+++ b/assets/scss/pages/_bookingForm.scss
@@ -90,6 +90,12 @@
     align-items: center;
   }
 }
+// .sumbit-btn-control {
+//   flex-direction: column;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//   align-items: center;
+// }
 .form-btn {
   width: 8vw;
 }
