--- a/assets/scss/pages/_news.scss
+++ b/assets/scss/pages/_news.scss
@@ -61,6 +61,9 @@ main {
         }
       }
     }
+    .main-card-img {
+      height: 45vmin;
+    }
     .card-content {
       flex-wrap: wrap;
       text-align: center;
