--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -17,7 +17,6 @@
   height: 100%;
 }
 
-
 .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -49,6 +48,23 @@
 .swiper-pagination-bullet-active-main {
   width: 56px;
   border-radius: 100px;
+}
+// .nav.sticky {
+//   position: fixed;
+//   background-color: rgba(255, 255, 255, 0.95);
+//   z-index: 99999;
+// }
+.section {
+  // padding: 15rem 3rem;
+  // border-top: 1px solid #ddd;
+
+  transition:
+    transform 1s,
+    opacity 1s;
+}
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8vh);
 }
 // banner start
 .banner {
@@ -260,6 +276,7 @@
 .offer-desktop {
   display: flex;
   justify-content: center;
+  transition: all 0.3s;
 }
 @media (max-width: 767px) {
   .offer-desktop {
@@ -280,13 +297,17 @@
 }
 //提供服務-end
 //news section start
-.text-news {
-  font-size: 32px;
-  font-weight: 700;
-  margin-bottom: 60px;
-  margin-top: 60px;
+.newsPic {
+  display: flex;
+  max-width: 636px;
+  height: 703px;
+  position: absolute;
+  z-index: 0;
+  left: 25%; /* 讓圖片左邊緣置於父容器的中央 */
+  right: 0;
 }
-.box {
+
+.news-desktop {
   width: 700px;
   height: 413px;
   justify-content: center;
@@ -304,26 +325,72 @@
     max-width: 100%;
     z-index: 2;
   }
-}
-.newsPic {
-  display: flex;
-  max-width: 636px;
-  height: 703px;
-  position: absolute;
-  z-index: 0;
-  left: 25%; /* 讓圖片左邊緣置於父容器的中央 */
-  right: 0;
-}
-.paragraph {
-  flex-direction: column;
-  text-align: left; /* 靠左對齊 */
-}
-.link {
-  // display: flex;
-  width: 700px;
-  height: 48px;
 
-  background-color: transparent;
+  .text-news {
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 60px;
+    margin-top: 60px;
+  }
+  .paragraph {
+    flex-direction: column;
+    text-align: left; /* 靠左對齊 */
+  }
+  .link {
+    // display: flex;
+    width: 700px;
+    height: 48px;
+
+    background-color: transparent;
+  }
+}
+@media (max-width: 767px) {
+  .news-desktop {
+    display: none;
+  }
+}
+.news-mobile {
+  display: none;
+}
+@media (max-width: 767px) {
+  .news-mobile {
+    width: 700px;
+    height: 413px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    margin-top: 20vmin;
+    flex-direction: column;
+    .news_list {
+      background: #fffdfd;
+      color: #e28763;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 100%;
+      z-index: 2;
+    }
+
+    .text-news {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 60px;
+      margin-top: 60px;
+      transition: all 0.3s;
+    }
+    .paragraph {
+      flex-direction: column;
+      text-align: left; /* 靠左對齊 */
+    }
+    .link {
+      // display: flex;
+      width: 700px;
+      height: 48px;
+
+      background-color: transparent;
+    }
+  }
 }
 //news section end
 #toTOP {
